# discord-monetization-bot

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: lint.yml  test.yml  tests.yml
config/: .env.example  config.py  constants.py  database.py  logging.py  settings.py
docs/: api.md  architecture.md  commands.md  contributing.md  deployment.md  faq.md  installation.md  performance.md  security.md  testing.md
docs/brd/: README.md  pillar-1-entry-conversion.md
docs/strategy/: README.md
scripts/: backup_db.py  migrate_db.py  reset_db.py  seed_data.py  setup.py  setup_db.py
src/: __init__.py  bot.py  cogs.py  constants.py  database.py  utils.py
src/cogs/: __init__.py  account_linking.py  admin.py  board_alerts.py  debug.py  economy.py  gameday_channels.py  help.py  loader.py  monetization.py  monthly_recap.py  ocr_bot.py  polls.py  promo_redemption.py  referral_challenges.py  referral_tracking.py  stats.py  tail_bot.py  tiered_roles.py  tournaments.py  win_sharing.py  xp_system.py
src/commands/: __init__.py  admin.py  balance.py  pay.py
src/events/: __init__.py  error.py  guild.py  member.py  message.py  reaction.py
src/handlers/: __init__.py  command_handler.py  event_handler.py
src/helpers/: __init__.py  formatters.py  validators.py
src/middleware/: __init__.py  auth.py  errors.py  logging.py
src/models/: database.py  event_models.py  referral_models.py  transaction.py  user.py  xp_models.py
src/services/: analytics.py  balance_service.py  image_generator.py  (+7 more)
tests/: __init__.py  conftest.py  test_bot.py  test_database.py  test_helpers.py  test_integration.py  test_middleware.py  test_models.py  test_services.py  test_tail_bot.py  test_utils.py  test_xp_system.py
(+30 files in other folders)
