[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-monetization-bot"
version = "1.0.0"
description = "A Discord bot for server monetization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ryan Feldhoff"}]
keywords = ["discord", "bot", "monetization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/ryanfeldhoff-pp/discord-monetization-bot"
Repository = "https://github.com/ryanfeldhoff-pp/discord-monetization-bot"
